--- a/DRMR/DRMR/Base.lproj/Main.storyboard
+++ b/DRMR/DRMR/Base.lproj/Main.storyboard
@@ -91,7 +91,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Whj-ha-aAH" id="OFu-yH-urx">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -106,6 +106,11 @@
                                 <action selector="onSignOut:" destination="Ak7-8I-DTV" id="m0d-bY-Jdb"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="6mH-IS-n3b">
+                            <connections>
+                                <segue destination="6d0-ru-nHl" kind="show" id="EuZ-SR-ba9"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="Jhr-Nn-74k" id="az2-F9-1ci"/>
@@ -114,6 +119,57 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8u3-2E-p8u" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1836" y="123.68815592203899"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="67j-EC-uM1">
+            <objects>
+                <viewController id="6d0-ru-nHl" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Jwf-wX-dT8"/>
+                        <viewControllerLayoutGuide type="bottom" id="EUy-8j-PJs"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="uFI-zT-FCW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title (Optional)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SCx-Wl-8UV">
+                                <rect key="frame" x="16" y="72" width="343" height="29"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Date" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WLs-1J-UuG">
+                                <rect key="frame" x="16" y="109" width="343" height="24"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8YI-Kr-jOr">
+                                <rect key="frame" x="8" y="149" width="359" height="502"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="8YI-Kr-jOr" firstAttribute="leading" secondItem="uFI-zT-FCW" secondAttribute="leading" constant="8" id="DyZ-oy-Lvb"/>
+                            <constraint firstAttribute="trailing" secondItem="SCx-Wl-8UV" secondAttribute="trailing" constant="16" id="Gfw-Sh-ecf"/>
+                            <constraint firstItem="EUy-8j-PJs" firstAttribute="top" secondItem="8YI-Kr-jOr" secondAttribute="bottom" constant="16" id="JAW-Ql-Opl"/>
+                            <constraint firstAttribute="trailing" secondItem="8YI-Kr-jOr" secondAttribute="trailing" constant="8" id="JRj-d6-Ol7"/>
+                            <constraint firstItem="SCx-Wl-8UV" firstAttribute="top" secondItem="Jwf-wX-dT8" secondAttribute="bottom" constant="8" id="Udj-So-fpS"/>
+                            <constraint firstItem="SCx-Wl-8UV" firstAttribute="leading" secondItem="uFI-zT-FCW" secondAttribute="leading" constant="16" id="aLz-HO-BCs"/>
+                            <constraint firstAttribute="trailing" secondItem="WLs-1J-UuG" secondAttribute="trailing" constant="16" id="b9i-sn-yiX"/>
+                            <constraint firstItem="8YI-Kr-jOr" firstAttribute="top" secondItem="WLs-1J-UuG" secondAttribute="bottom" constant="16" id="fl8-um-Nsn"/>
+                            <constraint firstItem="WLs-1J-UuG" firstAttribute="top" secondItem="SCx-Wl-8UV" secondAttribute="bottom" constant="8" id="saR-tu-MF9"/>
+                            <constraint firstItem="WLs-1J-UuG" firstAttribute="leading" secondItem="uFI-zT-FCW" secondAttribute="leading" constant="16" id="xeo-3M-zsL"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UXM-Mn-o80" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2857" y="124"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="wjM-Sa-zM6">
