--- a/DRMR/DRMR/Base.lproj/Main.storyboard
+++ b/DRMR/DRMR/Base.lproj/Main.storyboard
@@ -91,7 +91,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Whj-ha-aAH" id="OFu-yH-urx">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -120,10 +120,10 @@
             </objects>
             <point key="canvasLocation" x="1836" y="123.68815592203899"/>
         </scene>
-        <!--View Controller-->
+        <!--Add Dream View Controller-->
         <scene sceneID="67j-EC-uM1">
             <objects>
-                <viewController id="6d0-ru-nHl" sceneMemberID="viewController">
+                <viewController id="6d0-ru-nHl" customClass="AddDreamViewController" customModule="DRMR" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Jwf-wX-dT8"/>
                         <viewControllerLayoutGuide type="bottom" id="EUy-8j-PJs"/>
@@ -147,7 +147,7 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8YI-Kr-jOr">
                                 <rect key="frame" x="8" y="149" width="359" height="502"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -166,6 +166,11 @@
                             <constraint firstItem="WLs-1J-UuG" firstAttribute="leading" secondItem="uFI-zT-FCW" secondAttribute="leading" constant="16" id="xeo-3M-zsL"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bodyLabel" destination="8YI-Kr-jOr" id="ge1-F1-M2v"/>
+                        <outlet property="dateLabel" destination="WLs-1J-UuG" id="hks-1O-FPg"/>
+                        <outlet property="titleLabel" destination="SCx-Wl-8UV" id="CGZ-4p-Rfy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UXM-Mn-o80" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
