shows date picker

--- a/DRMR/DRMR/Base.lproj/Main.storyboard
+++ b/DRMR/DRMR/Base.lproj/Main.storyboard
@@ -139,22 +139,21 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8YI-Kr-jOr">
-                                <rect key="frame" x="8" y="149" width="359" height="502"/>
+                                <rect key="frame" x="8" y="161" width="359" height="490"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GXZ-io-yil">
-                                <rect key="frame" x="16" y="109" width="123" height="30"/>
+                                <rect key="frame" x="16" y="109" width="168" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="date">
-                                    <color key="titleColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
                                 <connections>
                                     <action selector="onTapDateButton:" destination="6d0-ru-nHl" eventType="touchUpInside" id="WKa-av-mDK"/>
-                                    <segue destination="Mqq-Td-Rr6" kind="popoverPresentation" popoverAnchorView="GXZ-io-yil" id="zwO-Ne-fiP">
-                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
-                                    </segue>
+                                    <segue destination="Mqq-Td-Rr6" kind="presentation" id="zwO-Ne-fiP"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -169,7 +168,7 @@
                             <constraint firstItem="SCx-Wl-8UV" firstAttribute="top" secondItem="Jwf-wX-dT8" secondAttribute="bottom" constant="8" id="Udj-So-fpS"/>
                             <constraint firstItem="8YI-Kr-jOr" firstAttribute="top" secondItem="GXZ-io-yil" secondAttribute="bottom" constant="10" id="Uyc-BE-Wvf"/>
                             <constraint firstItem="SCx-Wl-8UV" firstAttribute="leading" secondItem="uFI-zT-FCW" secondAttribute="leading" constant="16" id="aLz-HO-BCs"/>
-                            <constraint firstAttribute="trailing" secondItem="GXZ-io-yil" secondAttribute="trailing" constant="236" id="qP4-Fd-6at"/>
+                            <constraint firstAttribute="trailing" secondItem="GXZ-io-yil" secondAttribute="trailing" constant="191" id="qP4-Fd-6at"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Add Dream" id="Ns9-CM-2Tg">
@@ -197,7 +196,7 @@
         <!--Date Picker View Controller-->
         <scene sceneID="gif-xj-3Xh">
             <objects>
-                <viewController id="Mqq-Td-Rr6" customClass="DatePickerViewController" customModule="DRMR" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalTransitionStyle="crossDissolve" modalPresentationStyle="overCurrentContext" id="Mqq-Td-Rr6" customClass="DatePickerViewController" customModule="DRMR" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ac7-Gq-MdO"/>
                         <viewControllerLayoutGuide type="bottom" id="85v-0e-zwf"/>
@@ -206,21 +205,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jFn-ge-lOj">
-                                <rect key="frame" x="0.0" y="151" width="375" height="216"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jFn-ge-lOj">
+                                <rect key="frame" x="16" y="151" width="343" height="217"/>
                                 <subviews>
-                                    <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="Th8-Qc-rk0">
-                                        <rect key="frame" x="16" y="0.0" width="343" height="169"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="Th8-Qc-rk0">
+                                        <rect key="frame" x="0.0" y="1" width="343" height="170"/>
                                         <date key="date" timeIntervalSinceReferenceDate="512348293.63628203">
                                             <!--2017-03-27 22:58:13 +0000-->
                                         </date>
+                                        <connections>
+                                            <action selector="pickerValueChanged:" destination="Mqq-Td-Rr6" eventType="valueChanged" id="6c8-F6-afj"/>
+                                        </connections>
                                     </datePicker>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Vw-vR-vlV">
-                                        <rect key="frame" x="0.0" y="169" width="375" height="47"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Vw-vR-vlV">
+                                        <rect key="frame" x="0.0" y="170" width="343" height="47"/>
                                         <color key="backgroundColor" red="0.25882352941176473" green="0.098039215686274508" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="47" id="qu1-41-kgS"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                         <state key="normal" title="Done">
                                             <color key="titleColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -231,10 +233,33 @@
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="343" id="4nx-Ek-qus"/>
+                                    <constraint firstItem="Th8-Qc-rk0" firstAttribute="leading" secondItem="jFn-ge-lOj" secondAttribute="leading" id="FXs-tj-2PP"/>
+                                    <constraint firstItem="1Vw-vR-vlV" firstAttribute="centerX" secondItem="Th8-Qc-rk0" secondAttribute="centerX" id="Sal-Zu-fN8"/>
+                                    <constraint firstItem="1Vw-vR-vlV" firstAttribute="leading" secondItem="jFn-ge-lOj" secondAttribute="leading" id="d7R-s1-0fb"/>
+                                    <constraint firstAttribute="height" constant="217" id="fh4-yG-cSp"/>
+                                    <constraint firstItem="1Vw-vR-vlV" firstAttribute="leading" secondItem="jFn-ge-lOj" secondAttribute="leading" id="iGw-5g-1gt"/>
+                                    <constraint firstAttribute="trailing" secondItem="1Vw-vR-vlV" secondAttribute="trailing" id="iX5-5b-DAd"/>
+                                    <constraint firstItem="1Vw-vR-vlV" firstAttribute="top" secondItem="Th8-Qc-rk0" secondAttribute="bottom" constant="-1" id="lN8-GT-9pd"/>
+                                    <constraint firstItem="Th8-Qc-rk0" firstAttribute="top" secondItem="jFn-ge-lOj" secondAttribute="top" constant="1" id="loB-5s-Gor"/>
+                                    <constraint firstAttribute="bottom" secondItem="1Vw-vR-vlV" secondAttribute="bottom" id="tzg-bh-lJy"/>
+                                    <constraint firstAttribute="bottom" secondItem="1Vw-vR-vlV" secondAttribute="bottom" id="xJB-ER-O9H"/>
+                                    <constraint firstAttribute="trailing" secondItem="Th8-Qc-rk0" secondAttribute="trailing" id="zWX-01-4jp"/>
+                                </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.25882352939999997" green="0.098039215690000001" blue="0.50196078430000002" alpha="0.35204741379310345" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="jFn-ge-lOj" firstAttribute="top" secondItem="Ac7-Gq-MdO" secondAttribute="bottom" constant="131" id="4wN-qa-XQL"/>
+                            <constraint firstAttribute="trailing" secondItem="jFn-ge-lOj" secondAttribute="trailing" constant="16" id="PtF-EZ-GMO"/>
+                            <constraint firstItem="jFn-ge-lOj" firstAttribute="leading" secondItem="ekm-Eg-cO9" secondAttribute="leading" constant="16" id="fvQ-pa-Nph"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="popUpView" destination="jFn-ge-lOj" id="7z6-fZ-Ts2"/>
+                        <outlet property="selectDatePicker" destination="Th8-Qc-rk0" id="A8n-5W-sNw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GZe-mu-Oad" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
